# accsyn-python-api

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  readthedocs.yaml  setup.py
.github/workflows/: github-actions-black.yml
accsyn_api/: __init__.py  session.py  session_py2.py
doc/: clients.rst  compute.rst  conf.py  datatypes.rst  deliveries.rst  file.rst  filesharing.rst  glossary.rst  index.rst  installing.rst  introduction.rst  jobs.rst  misc.rst  publish.rst  queues.rst  release_notes.rst  render.rst  requirements.txt  settings.rst  shares.rst  sites.rst  transfers.rst  users.rst  using.rst
doc/_static/: accsyn.css
doc/api_reference/: index.rst  session.rst
source/accsyn_api/: __init__.py  _devtools.py  _version.py  session.py
tests/: conftest.py  test_delivery.py  test_filesharing.py  test_find_entitytypes.py  test_settings.py  test_transfer.py
